Update Readme and Example Notebook

--- a/loading.ipynb
+++ b/loading.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from archive.loading import load_module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -28,6 +19,8 @@
     }
    ],
    "source": [
+    "from archive.loading import load_module\n",
+    "\n",
     "model = load_module(module_path=\"model_test\")"
    ]
   },
@@ -117,31 +110,7 @@
     }
    ],
    "source": [
-    "import wget\n",
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
     "from torchinfo import summary\n",
-    "from torchvision.models import EfficientNet_B0_Weights\n",
-    "from prediction.custom import inference_image_classification\n",
-    "\n",
-    "# Get the Weight of Model `DEFAULT` == last best version\n",
-    "weights = EfficientNet_B0_Weights.DEFAULT\n",
-    "\n",
-    "\n",
-    "image_transformer = weights.transforms()\n",
-    "class_names = ['pizza', 'steak', 'sushi']\n",
-    "\n",
-    "img_path = wget.download(\"https://img.cuisineaz.com/660x660/2013/12/20/i8238-maki-sushi.jpeg\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "model.to(\"cpu\")\n",
-    "\n",
-    "inference_image_classification(model=model,\n",
-    "                               img_path=img_path,\n",
-    "                               pipeline=image_transformer,\n",
-    "                               class_names=class_names)\n",
-    "\n",
     "\n",
     "# plot the model\n",
     "summary(\n",
