--- a/saving.ipynb
+++ b/saving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "============================================================================================================================================"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,10 +85,11 @@
    "source": [
     "import torch\n",
     "from torchinfo import summary\n",
+    "# the Custom Pytorch Module Class is Saved in python file with all dependencies\n",
     "from efficientnetv1 import EfficientNetFoodClassifier\n",
     "\n",
     "\n",
-    "### Setup device agnostic code\n",
+    "# Setup device agnostic code\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
@@ -105,15 +106,6 @@
     "    col_width=20,\n",
     "    row_settings=[\"var_names\"]\n",
     ") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from archive.saving import save_module"
    ]
   },
   {
@@ -144,19 +136,14 @@
     }
    ],
    "source": [
+    "from archive.saving import save_module\n",
+    "\n",
     "save_module(\n",
     "    module_instance=model, \n",
     "    model_name=\"model_test\",\n",
     "    class_source_code_file_path=\"efficientnetv1.py\"\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
