Add List of Source file to Save the Model

--- a/saving.ipynb
+++ b/saving.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torchinfo import summary\n",
+    "# the Custom Pytorch Module Class is Saved in python file with all dependencies\n",
+    "from efficientnetv1 import EfficientNetFoodClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,18 +81,12 @@
        "============================================================================================================================================"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch\n",
-    "from torchinfo import summary\n",
-    "# the Custom Pytorch Module Class is Saved in python file with all dependencies\n",
-    "from efficientnetv1 import EfficientNetFoodClassifier\n",
-    "\n",
-    "\n",
     "# Setup device agnostic code\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using device: {device}\")\n",
@@ -102,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +126,8 @@
      "text": [
       "[INFO] : Create [model_test] directory\n",
       "[INFO] : Source file [efficientnetv1.py] saved Successfuly here : [model_test/efficientnetv1.py]\n",
+      "[INFO] : The main class source code is [model_test/efficientnetv1.py]\n",
+      "[INFO] : Source file [frozen.py] saved Successfuly here : [model_test/frozen.py]\n",
       "[WARNING] : Skipping saving non-serializable attribute : [T_destination]\n",
       "[INFO] : Saving [5,292,391] Parameters in [model_test/module_data.pth]\n",
       "[INFO] : Saving [15] Attributes of [EfficientNetFoodClassifier] in [model_test/module_data.pth]\n",
@@ -133,7 +141,7 @@
     "save_module(\n",
     "    module_instance=model, \n",
     "    model_name=\"model_test\",\n",
-    "    class_source_code_file_path=\"efficientnetv1.py\"\n",
+    "    source_code_files=[\"efficientnetv1.py\", \"frozen.py\"]\n",
     ")"
    ]
   }
