Refactor file path saver in Saving function

--- a/saving.ipynb
+++ b/saving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cpu\n"
+      "Using device: cuda\n"
      ]
     },
     {
@@ -81,7 +81,7 @@
        "============================================================================================================================================"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,30 +108,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf model_test"
+    "!rm -rf models/model_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] : Create [model_test] directory\n",
-      "[INFO] : Source file [efficientnetv1.py] saved Successfuly here : [model_test/efficientnetv1.py]\n",
-      "[INFO] : The main class source code is [model_test/efficientnetv1.py]\n",
-      "[INFO] : Source file [frozen.py] saved Successfuly here : [model_test/frozen.py]\n",
+      "[INFO] : Create [models/model_test] directory\n",
+      "[INFO] : Source file [efficientnetv1.py] saved Successfuly here : [models/model_test/efficientnetv1.py]\n",
+      "[INFO] : The main class source code is [models/model_test/efficientnetv1.py]\n",
+      "[INFO] : Source file [frozen.py] saved Successfuly here : [models/model_test/frozen.py]\n",
       "[WARNING] : Skipping saving non-serializable attribute : [T_destination]\n",
-      "[INFO] : Saving [5,292,391] Parameters in [model_test/module_data.pth]\n",
-      "[INFO] : Saving [15] Attributes of [EfficientNetFoodClassifier] in [model_test/module_data.pth]\n",
-      "[INFO] : Entire Custom Module Saved Successfully in [model_test]\n"
+      "[INFO] : Saving [5,292,391] Parameters in [models/model_test/module_data.pth]\n",
+      "[INFO] : Saving [15] Attributes of [EfficientNetFoodClassifier] in [models/model_test/module_data.pth]\n",
+      "[INFO] : Entire Custom Module Saved Successfully in [models/model_test]\n"
      ]
     }
    ],
@@ -141,9 +141,17 @@
     "save_module(\n",
     "    module_instance=model, \n",
     "    model_name=\"model_test\",\n",
-    "    source_code_files=[\"efficientnetv1.py\", \"frozen.py\"]\n",
+    "    source_code_files=[\"efficientnetv1.py\", \"frozen.py\"],\n",
+    "    saved_path=\"models/\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
